sqpack 1.1.0
------------
(released on Mon May 22 14:58:56 CEST 2000)

----- cvs ci ------
Sun Oct 15 19:17:28 NOVST 2000
max (patch from Pavel Gulchouck):
* jam packing fix (lastreads & replyes)

----- cvs ci ------
Mon Oct  9 21:33:47 NOVST 2000
max:
* compile with new smapi (replynext changed to xmreplynext)

----- cvs ci ------
Mon Sep  4 13:00:42 NOVST 2000
max (patch from Pavel Gulchouck):
* JAM replynext update

----- cvs ci ------
Sun Sep  3 19:40:14 NOVST 2000
max (patch from Pavel Gulchouck):
* JAM lastreads update
* SDM areas support

----- cvs ci ------
Mon May 22 14:52:27 CEST 2000
mtt:
* changed version number to 1.1.0
	
----- cvs ci ------
Mon May  8 17:40:14 NOVST 2000
max (patch from Alex Bronin):
* MS Visual C porting

----- cvs ci ------
Fri Apr  7 11:24:49 MSD 2000
max (patch from Vlad Pluzhnikov):
* add /0 after MsgReadMsg

----- cvs ci ------
Tue Mar 28 15:25:58 MSD 2000
max (patch from Serguei Revtov):
* fix lastread problem

----- cvs ci ------
Fri Mar 24 00:44:00 NOVT 2000
max(patch from Alex Bronin):
* rollback 000307.diff - fix squish lastread problem.

----- cvs ci ------
Thu Mar 23 10:15:52 MSK 2000
max (patch from Serguei Revtov):
* -nopack echoarea option support
* compiling without warnings on solaris

----- cvs ci ------
Mon Mar 20 08:56:28 MSK 2000
max (patch from Serguei Revtov):
* change legacy SUN & Win makefiles to compile with new includes, simplifying

----- cvs ci ------
Sat Mar 18 21:41:00 CET 2000
sms:
* packing (removing deleted mails) ALL areas

----- cvs ci ------
Tue Feb  8 00:07:06 NOVT 2000
max (patch from Alex Bronin 2:5049/36):
* print total statistic after packing

----- cvs ci ------
Fri Feb  4 00:34:29 NOVT 2000
max:
- lastread recalculation in sqpack (patch from Serguei)

----- cvs ci ------
Fri Nov 18  14:19:00
Fedor:
+ purge Jam areas (from Vlad Pluzhnikov).

----- cvs ci ------
Thu Oct 16 13:40:00 MET DST 1999
sms:
- reorganized Makefiles, please read README.Makefiles in the husky-common
  package!
