@@ -3,6 +3,12 @@ sqpack 1.1.0
 (released on Mon May 22 14:58:56 CEST 2000)
 
 ----- cvs ci ------
+Sun Oct 22 15:19:42 NOVST 2000
+max:
+* new command line interface (sqpack <mask>)
+  UPDATE YOUR SCRIPTS!
+
+----- cvs ci ------
 Sun Oct 15 19:17:28 NOVST 2000
 max (patch from Pavel Gulchouck):
 * jam packing fix (lastreads & replyes)
